# project_template

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: Linux.yml  Windows.yml
include/: Magic.hpp
main/: CMakeLists.txt  main.cpp
source/: Magic.cpp
test/: CMakeLists.txt  Magic.cpp
